third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16199.disassembled.exp
processed 2 tasks
task 0 lines 3-48:  publish [// Bytecode version v8]
Error: error: expected `<newline>`, found `|`
  ┌─ test:8:20
  │
8 │     local l0: |u64||u64||u64|u64
  │                    ^


task 1 lines 52-52:  run 0xc0ffee::m::test
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
